add eslint and prettier

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,6 +1,11 @@
 {
-    "compilerOptions": {
-      "baseUrl": "./src"
-    },
-    "include": ["src"]
+  "compilerOptions": {
+    "baseUrl": "./",
+    "paths": {
+      "@components/*": ["components/*"],
+      "@utils/*": ["utils/*"],
+      "@styles/*": ["styles/*"],
+      "@pages/*": ["pages/*"]
+    }
+  }
 }
