--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "math4kids",
+  "_id": "math4kids",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -26,6 +27,16 @@
     "workbox-routing": "^5.1.3",
     "workbox-strategies": "^5.1.3",
     "workbox-streams": "^5.1.3"
+  },
+  "devDependencies": {
+    "babel-eslint": "^10.1.0",
+    "eslint": "^7.29.0",
+    "eslint-config-standard": "^16.0.2",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.3.1",
+    "eslint-plugin-react": "^7.22.0"
   },
   "scripts": {
     "start": "react-scripts start",
